May 28, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/Pcsx.xcodeproj/project.pbxproj: Fixed Xcode Project.
 * macosx/English.lproj/InfoPlist.strings: Updated info.
 * autogen.sh: Removed autoreconf.
 * libpcsxcore/psxbios.c: Implemented more functions by hand (qsort() is not
   tested).

May 25, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot, po/zh_CN.po:
   Updated.
 * win32/gui/WndMain.c: Do not make temporary buffer static.
 * win32/intl/gettext.c: Likewise.

May 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * win32/gui/WndMain.c: Also show Japanese titles properly for Windows
   (need to set ACP to east-asian languages).
 * win32/intl/gettext.c: Added a hack for UTF-8 support.
 * win32/gui/AboutDlg.c: Updated info.
 * win32/config.h: Silenced MSVC6 warnings.
 * libpcsxcore/psxbios.c: Implemented more functions. RNG should behave
   exactly the same as real BIOS now.
 * libpcsxcore/psxcounters.c: Fixed freeze bug when launching an NTSC game
   when Config.PsxAuto is enabled and Config.PsxType is set to PAL.

May 23, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * AUTHORS: Updated info.
 * gui/AboutDlg.c: Likewise, and fixed FTBFS on SLED 10.
 * gui/MemcardDlg.c: Show Japanese titles properly.
 * libpcsxcore/sio.h: Likewise.
 * libpcsxcore/sio.c: Likewise.

May 22, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/pulseaudio.c: Use Native Endian instead of Little Endian.

May 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/oss.c: Readded OSS, PulseAudio, ALSA & NULL backends.
 * plugins/dfsound/pulseaudio.c: Likewise.
 * plugins/dfsound/nullsnd.c: Likewise.
 * plugins/dfsound/alsa.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * configure.ac: Added an option --enable-sound to specify the sound backend.
 * plugins/dfsound/Makefile.am: Likewise.
 * po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot, po/zh_CN.po:
   Updated.